# Secu-Genie-Backend

./: main.py  pyproject.toml  routes.py
config/: settings.py
controllers/: file_controller.py
grpc_server/: server.py  servicer.py
models/: chunk.py  upload_response.py
proto/: chat.proto  chat_pb2.py  chat_pb2_grpc.py
services/: file_service.py  llm_service.py  vector_service.py
services/loaders/: ics_loader.py  loaders.py
utils/: chunk_util.py
