[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["NefariousNiru <nirupomboseroy99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"
langchain = "^0.3.25"
pinecone-client = "^6.0.0"
tiktoken = "^0.9.0"
openai = "^1.88.0"
pydantic = "^2.11.7"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
